SB-26092 Fix test cases